# soldeer-crawler

./: .gitignore  Cargo.toml  npm_repositories.toml  repositories.toml
src/: db.rs  github.rs  main.rs  manager.rs  npm.rs  utils.rs
